crates/runtime/tests/dynamodb/snapshots/integration__dynamodb__aggregation.snap
---
source: crates/runtime/tests/dynamodb/mod.rs
expression: formatted
---
+-------------+--------------------------+-------------------------------+
| total_count | max_timestamp            | max_timestamp_tz              |
+-------------+--------------------------+-------------------------------+
| 2           | 2019-01-01T00:00:00.123Z | 2019-01-01T00:00:00.456+05:00 |
+-------------+--------------------------+-------------------------------+
