crates/runtime/tests/dynamodb/snapshots/integration__dynamodb__dynamodb_federated_count.snap
---
source: crates/runtime/tests/dynamodb/mod.rs
expression: formatted
---
+-------------+
| total_count |
+-------------+
| 2           |
+-------------+
