crates/runtime/tests/dynamodb/snapshots/integration__dynamodb__dynamodb_federated_schema.snap
---
source: crates/runtime/tests/dynamodb/mod.rs
expression: formatted
---
+-----------------------+--------------------------------------------------------------------------------------------------------------------+-------------+
| column_name           | data_type                                                                                                          | is_nullable |
+-----------------------+--------------------------------------------------------------------------------------------------------------------+-------------+
| col_binary            | Binary                                                                                                             | YES         |
| col_binary_set        | List(Field { name: "item", data_type: Binary, nullable: true, dict_id: 0, dict_is_ordered: false, metadata: {} })  | YES         |
| col_bool              | Boolean                                                                                                            | YES         |
| col_date              | Date32                                                                                                             | YES         |
| col_list              | List(Field { name: "item", data_type: Utf8, nullable: true, dict_id: 0, dict_is_ordered: false, metadata: {} })    | YES         |
| col_map               | Null                                                                                                               | YES         |
| col_map.age           | Int64                                                                                                              | YES         |
| col_map.balance       | Float64                                                                                                            | YES         |
| col_map.is_active     | Boolean                                                                                                            | YES         |
| col_map.name          | Utf8                                                                                                               | YES         |
| col_number_float      | Float64                                                                                                            | YES         |
| col_number_int        | Int64                                                                                                              | YES         |
| col_number_scientific | Int64                                                                                                              | YES         |
| col_number_set_float  | List(Field { name: "item", data_type: Float64, nullable: true, dict_id: 0, dict_is_ordered: false, metadata: {} }) | YES         |
| col_number_set_int    | List(Field { name: "item", data_type: Int64, nullable: true, dict_id: 0, dict_is_ordered: false, metadata: {} })   | YES         |
| col_string            | Utf8                                                                                                               | YES         |
| col_string_set        | List(Field { name: "item", data_type: Utf8, nullable: true, dict_id: 0, dict_is_ordered: false, metadata: {} })    | YES         |
| col_time              | Utf8                                                                                                               | YES         |
| col_timestamp         | Timestamp(Millisecond, Some("UTC"))                                                                                | YES         |
| id                    | Int64                                                                                                              | YES         |
| version               | Int64                                                                                                              | YES         |
+-----------------------+--------------------------------------------------------------------------------------------------------------------+-------------+
