crates/runtime/tests/dynamodb/snapshots/integration__dynamodb__full_scan.snap
---
source: crates/runtime/tests/dynamodb/mod.rs
expression: formatted
---
+------------+--------------------------+----------+------------+----------------+----------------------------+--------------------------------+----------------------------------+-----------------------------+--------------------------------+-----------------------------------------+------------------+----------------+-----------------------+----------------------+--------------------+-------------+-----------------+----------+--------------------------+-------------------------------+----+---------+
| col_binary | col_binary_set           | col_bool | col_date   | col_list       | col_map_fully_unnested.age | col_map_fully_unnested.balance | col_map_fully_unnested.is_active | col_map_fully_unnested.name | col_map_partially_unnested.foo | col_map_partially_unnested.nested_lvl_1 | col_number_float | col_number_int | col_number_scientific | col_number_set_float | col_number_set_int | col_string  | col_string_set  | col_time | col_timestamp            | col_timestamp_tz              | id | version |
+------------+--------------------------+----------+------------+----------------+----------------------------+--------------------------------+----------------------------------+-----------------------------+--------------------------------+-----------------------------------------+------------------+----------------+-----------------------+----------------------+--------------------+-------------+-----------------+----------+--------------------------+-------------------------------+----+---------+
| 626c6f62   | [6461746131, 6461746132] | true     | 2019-01-01 | [1, foo, true] | 30                         | 1234.56                        | true                             | John                        | bar                            | {foo: baz}                              | 3.14159          | 42             | 12300000000           | [1.1, 2.2, 3.3]      | [1, 2, 3]          | string 🚀😊 | [apple, banana] | 12:34:56 | 2019-01-01T00:00:00.123Z | 2019-01-01T00:00:00.456+05:00 | 1  | 2       |
|            |                          |          |            |                |                            |                                |                                  |                             |                                |                                         |                  |                |                       |                      |                    |             |                 |          |                          |                               | 2  | 2       |
+------------+--------------------------+----------+------------+----------------+----------------------------+--------------------------------+----------------------------------+-----------------------------+--------------------------------+-----------------------------------------+------------------+----------------+-----------------------+----------------------+--------------------+-------------+-----------------+----------+--------------------------+-------------------------------+----+---------+
