crates/runtime/tests/dynamodb/snapshots/integration__dynamodb__json_nesting_simple.snap
---
source: crates/runtime/tests/dynamodb/mod.rs
expression: formatted
---
+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----+
| data_json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           | id |
+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----+
| {"col_binary":null,"col_binary_set":null,"col_bool":null,"col_date":null,"col_list":null,"col_number_float":null,"col_number_int":null,"col_number_scientific":null,"col_number_set_float":null,"col_number_set_int":null,"col_string":null,"col_string_set":null,"col_time":null,"col_timestamp":null,"version":2.0}                                                                                                                                                                                                                                                                                                                                                                                                                                               | 2  |
| {"col_binary":"YmxvYg==","col_binary_set":["ZGF0YTE=","ZGF0YTI="],"col_bool":true,"col_date":"2019-01-01","col_list":[1.0,"foo",true],"col_map_fully_unnested.age":30.0,"col_map_fully_unnested.balance":1234.56,"col_map_fully_unnested.is_active":true,"col_map_fully_unnested.name":"John","col_map_partially_unnested.foo":"bar","col_map_partially_unnested.nested_lvl_1":{"foo":"baz"},"col_number_float":3.14159,"col_number_int":42.0,"col_number_scientific":12300000000.0,"col_number_set_float":["1.1","2.2","3.3"],"col_number_set_int":["1","2","3"],"col_string":"string 🚀😊","col_string_set":["apple","banana"],"col_time":"12:34:56","col_timestamp":"2019-01-01T00:00:00.123Z","col_timestamp_tz":"2019-01-01T00:00:00.456+05:00","version":2.0} | 1  |
+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----+
