crates/runtime/tests/dynamodb/snapshots/integration__dynamodb__nested_projection_no_nested_filter.snap
---
source: crates/runtime/tests/dynamodb/mod.rs
expression: formatted
---
+----+----------------------------+--------------------------------+----------------------------------+-----------------------------+--------------------------------+-----------------------------------------+
| id | col_map_fully_unnested.age | col_map_fully_unnested.balance | col_map_fully_unnested.is_active | col_map_fully_unnested.name | col_map_partially_unnested.foo | col_map_partially_unnested.nested_lvl_1 |
+----+----------------------------+--------------------------------+----------------------------------+-----------------------------+--------------------------------+-----------------------------------------+
| 2  |                            |                                |                                  |                             |                                |                                         |
| 1  | 30                         | 1234.560000                    | true                             | John                        | bar                            | {foo: baz}                              |
+----+----------------------------+--------------------------------+----------------------------------+-----------------------------+--------------------------------+-----------------------------------------+
