crates/runtime/tests/dynamodb/snapshots/integration__dynamodb__not_nulls.snap
---
source: crates/runtime/tests/dynamodb/mod.rs
expression: formatted
---
+----+-------------+----------------+
| id | col_string  | col_number_int |
+----+-------------+----------------+
| 1  | string 🚀😊 | 42             |
+----+-------------+----------------+
