crates/runtime/tests/dynamodb/snapshots/integration__dynamodb__query_result.snap
---
source: crates/runtime/tests/dynamodb/mod.rs
expression: formatted
---
+-------------+------------+----------+----------------------+--------------+----------------+
| customer_id | product_id | quantity | timestamp            | total_amount | transaction_id |
+-------------+------------+----------+----------------------+--------------+----------------+
| 2           | 3          | 1        | 2025-05-29T11:15:00Z | 19.99        | txn_9c9e5e4b   |
| 3           | 4          | 1        | 2025-05-29T13:45:00Z | 89.99        | txn_3ba0522f   |
| 1           | 2          | 3        | 2025-05-29T12:30:00Z | 149.97       | txn_0f33ea59   |
| 5           | 5          | 2        | 2025-05-29T14:00:00Z | 259.98       | txn_222eebed   |
| 1           | 1          | 2        | 2025-05-29T10:00:00Z | 1399.98      | txn_c333f24f   |
+-------------+------------+----------+----------------------+--------------+----------------+
